# advent-of-code

./: .gitignore  CLAUDE.md  Cargo.toml  pyproject.toml  shell.nix
2015/: Cargo.toml
2015/src/: day2.rs  day3.rs  day4.rs  dayN.rs.tmpl  lib.rs
2015/src/day1/: mod.rs
2020/day/1/: main.jl
2020/day/2/: main.jl  part2.jl
2021/: day9.py
2021/day1/rust/: Cargo.toml
2021/day1/rust/benches/: benchmark.rs
2021/day1/rust/src/: lib.rs  main.rs
2021/rust/: Cargo.toml
2021/rust/benches/: day1.rs
2021/rust/src/: day4.rs  day5.rs  day6.rs  lib.rs
2021/rust/src/util/: graph.rs  mod.rs  neighbours.rs  str.rs
2025/day1/: main.py  test_input.txt
2025/day10/: main.py
2025/day2/: main.py  test.py
2025/day3/: main.py  test.py
2025/day4/: main.py
2025/day5/: main.py
2025/day6/: main.py
2025/day7/: main.py
2025/day8/: main.py
2025/day9/: main.py
2025/rust/: Cargo.toml
2025/rust/src/: day11.rs  day12.rs  lib.rs
