[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "line-profiler[all]>=5.0.0",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "z3-solver>=4.15.4.0",
]
